--- a/publication-impact/src/app/globals.css
+++ b/publication-impact/src/app/globals.css
@@ -3,19 +3,21 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #000000;
   --foreground: #171717;
 }
 
+/*
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
 }
+*/
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f9fafb; /* Light gray background */
+  font-family: 'Inter', sans-serif;
+  margin: 0;
 }
